[gd_scene load_steps=11 format=3 uid="uid://drd4ltw34x227"]

[ext_resource type="Script" path="res://control.gd" id="1_a4nt4"]
[ext_resource type="FontFile" uid="uid://bc55o4w2pnwi6" path="res://Roboto-Bold.ttf" id="2_aeqsc"]
[ext_resource type="AudioStream" uid="uid://b6hiyi4qijlmr" path="res://BeepBox-Song.wav" id="2_j3ydt"]
[ext_resource type="AudioStream" uid="uid://87qnpsd24oi5" path="res://BeepBox-Song2.wav" id="3_8cnuf"]
[ext_resource type="AudioStream" uid="uid://cpfsp2wv076cj" path="res://BeepBox-Song3.wav" id="4_1k42k"]
[ext_resource type="AudioStream" uid="uid://c7atorusn3bu0" path="res://Press_sound.wav" id="5_mncm1"]

[sub_resource type="Animation" id="Animation_ym30x"]
resource_name = "Finish_Lable"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_q5d3w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_djo85"]
resource_name = "Start_Lable"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kwmkc"]
_data = {
"Finish_Lable": SubResource("Animation_ym30x"),
"RESET": SubResource("Animation_q5d3w"),
"Start_Lable": SubResource("Animation_djo85")
}

[node name="Control" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a4nt4")

[node name="SceneMenu" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="SceneMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.5
offset_top = -15.5
offset_right = 98.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2

[node name="Scene1" type="Button" parent="SceneMenu/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_aeqsc")
text = "Scene1"

[node name="Scene2" type="Button" parent="SceneMenu/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_aeqsc")
text = "Scene2"

[node name="Scene3" type="Button" parent="SceneMenu/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_aeqsc")
text = "Scene3"

[node name="PauseMenu" type="Panel" parent="."]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.5
offset_top = -15.5
offset_right = 98.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2

[node name="Resume" type="Button" parent="PauseMenu/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_aeqsc")
text = "Resume"

[node name="Menu" type="Button" parent="PauseMenu/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_aeqsc")
text = "Menu"

[node name="Sound" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource("2_j3ydt")

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource("3_8cnuf")

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource("4_1k42k")

[node name="Start_Animation" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Start_Animation"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_aeqsc")
text = "Start"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Start_Animation"]
libraries = {
"": SubResource("AnimationLibrary_kwmkc")
}

[node name="SoundFx" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AudioStreamPlayer4" type="AudioStreamPlayer" parent="SoundFx"]
stream = ExtResource("5_mncm1")

[node name="Finish_Animation" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Finish_Animation"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_aeqsc")
text = "Finish"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Finish_Animation"]
libraries = {
"": SubResource("AnimationLibrary_kwmkc")
}

[connection signal="pressed" from="SceneMenu/HBoxContainer/Scene1" to="." method="_on_scene_1_pressed"]
[connection signal="pressed" from="SceneMenu/HBoxContainer/Scene2" to="." method="_on_scene_2_pressed"]
[connection signal="pressed" from="SceneMenu/HBoxContainer/Scene3" to="." method="_on_scene_3_pressed"]
[connection signal="pressed" from="PauseMenu/HBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenu/HBoxContainer/Menu" to="." method="_on_menu_pressed"]
